--- a/style.css
+++ b/style.css
@@ -1,14 +1,17 @@
 * {
     box-sizing: border-box;
-    cursor:pointer;
 }
 
 html {
     font-size: 10px;
     border: unset;
+    font-family: 'Lexend Deca', sans-serif;
 }
 
-/*LAYOUT*/
+body, button {
+    background-color: hsl(0, 0%, 95%);
+}
+
 .cards {
     display: flex;
     flex-direction: row;
@@ -18,81 +21,50 @@ html {
     margin-right: 6.35em;
 }
 
+.heading {
+    margin: 0em auto .5em .7em;
+    padding-bottom: 0em;
+    color: hsl(0, 0%, 95%);
+    font-family: 'Big Shoulders Display', cursive;
+    font-size: 3.5em;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
 #sedans, #suvs, #luxury {
     padding-right: .5em;
     padding-left: .5em;
     margin-left: 1em;
     margin-right: .5em;
     flex: 1 200px;
-    max-height: 400px;
+    max-height: 450px;
     max-width: 250px;
 }
 
-#sedans {
-    border-radius: 1em 1em 0 0;
-}
-
-#luxury {
-    border-radius: 0 0 1em 1em;
-}
 img {
-    margin: 3em auto 2.5em 3.5em;
-}
-
-.heading {
-    margin: 0em auto 1.0em 1.7em;
-    padding-bottom: 0em;
-}
-
-p {
-    margin: auto 3em 1.5em 3em;
-    padding-bottom: .1em;
-    line-height: 1.2pc;
-}
-
-/*COLORS*/
-body, button {
-    background-color: hsl(0, 0%, 95%);
-}
-
-.heading {
-    color: hsl(0, 0%, 95%);
+    width: 4em;
+    margin: 3em auto 2.5em 2em;
 }
 
 #sedans {
     background-color: hsl(31, 77%, 52%);
+    border-radius: 1em 1em 0 0;
 }
-
 #suvs {
     background-color: hsl(184, 100%, 22%);
 }
-
 #luxury {
     background-color: hsl(179, 100%, 13%);
+    border-radius: 0 0 1em 1em;
 }
 
 p {
+    margin: .5em 2em 3.0em 2em;
+    padding-bottom: .1em;
+    line-height: 1.2pc;
+    height: 10em;
     color: hsla(0, 0%, 100%, 0.75);
-}
-/*TYPOGRAPHY*/
-@font-face {
-    font-family: "Lexend Deca", "Big Shoulders Display";
-    src: url(https://fonts.google.com/specimen/Big+Shoulders+Display),
-         url(https://fonts.google.com/specimen/Lexend+Deca);
-} 
-
-html {
-    font-family: "Lexend Deca", "Big Shoulders Display";
-}
-
-.heading {
-    font-size: 2em;
-    font-weight: 700;
-    text-transform: uppercase;
-}
-
-p {
-    font-size: 1.3em;
+    font-size: 1.2em;
     font-weight: 400;
 }
 
@@ -102,8 +74,19 @@ button {
     background-color: hsl(0, 0%, 95%);
     border: unset;
     border-radius: 1.8rem;
-    padding: .9em 1.7em .9em 1.7em;
-    margin: 0em auto 2.5em 3em;
+    padding: 1em 1.9em 1em 1.9em;
+    margin: 0em auto 2.5em 2.2em;
+    cursor:pointer;
+}
+
+#sedans>div>button {
+    color: hsl(31, 77%, 52%);
+}
+#suvs>div>button {
+    color: hsl(184, 100%, 22%);
+}
+#luxury>div>button {
+    color: hsl(179, 100%, 13%);
 }
 
 button:hover {
@@ -111,28 +94,17 @@ button:hover {
     border: 2px solid hsl(0, 0%, 95%);
 }
 
-#sedans>div>button {
-    color: hsl(31, 77%, 52%);
-}
-
+#luxury>div>button:hover, 
+#suvs>div>button:hover,
 #sedans>div>button:hover {
     color: hsl(0, 0%, 95%)
 }
 
-#suvs>div>button {
-    color: hsl(184, 100%, 22%);
+.attribution { 
+    font-size: 11px; text-align: center; 
 }
-
-#suvs>div>button:hover {
-    color: hsl(0, 0%, 95%)
-}
-
-#luxury>div>button {
-    color: hsl(179, 100%, 13%);
-}
-
-#luxury>div>button:hover {
-    color: hsl(0, 0%, 95%)
+.attribution a { 
+    color: hsl(228, 45%, 44%); 
 }
 
 @media screen and (min-width: 553px) {
